# pre-commit-metadata-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/pre_commit_metadata_hooks/: __init__.py  cli.py
tests/: test_cli.py
